[package]
name = "rdbc"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.25"
anyhow = "1.0.57"
thiserror = "1.0.31"
async-trait = "0.1.58"
chrono = "0.4.23"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}

